# Helbreath-Heldenian-Project

./: .gitignore  CHANGELOG.md  CLAUDE_AGENTS.md  CLAUDE_CHANGELOG.md  CLAUDE_LOGGING.md  CLAUDE_WORKFLOW.md  CODING_STANDARDS.md  VERSION_STANDARDS.md  bak.py  claude.md  grep.py
.claude/: settings.local.json
Binaries/Game/: settings.json
Binaries/Server/: GameConfigs.db  MapInfo.db  gamedata.db  server_config.json  tradingpost.db
Binaries/Server/Accounts/: ShadowEvil.db
Scripts/: build_sentry.ps1  citem_composition_rename.py  convert_account_db.py  fix_remaining_attributes.py  fix_weapon_pak_poses.py  item_type_client_fixes.py  item_type_renames.py  item_type_server_fixes.py  migrate_color_palette.py  migrate_dialog_box_manager.py  migrate_durability_accounts.py  migrate_durability_gamedata.py  migrate_game_settings.py  migrate_hit_dice.py  migrate_item_attributes.py  migrate_npc_damage.py  migrate_play_game_sound.py  migrate_step3.py  migrate_step5.py  migrate_step6.py  migrate_strip_guild_columns.py  move_draw_methods.py  move_item_list_to_player.py  nullptr_replace.py  phase1_dialog_signature_migration.py  phase1_fix_mouse_vars.py  phase1_fix_remaining.py  phase2_enable_disable_ownership.py  refactor_item_attributes.py  setup_gamedata.py  upload_symbols.ps1
Scripts/output/: DialogBoxManager.cpp  DialogBox_Commander.cpp  DialogBox_GuildHallMenu.cpp  DialogBox_HudPanel.cpp  DialogBox_Inventory.cpp  DialogBox_ItemUpgrade.cpp  DialogBox_Manufacture.cpp  DialogBox_Party.cpp  DialogBox_Resurrect.cpp  DialogBox_Skill.cpp  DialogBox_Soldier.cpp  EventListManager.cpp  Game.cpp  Game.h  MagicCastingSystem.cpp  NetworkMessages_Apocalypse.cpp  NetworkMessages_Combat.cpp  NetworkMessages_Heldenian.cpp  NetworkMessages_Skills.cpp  NetworkMessages_Stats.cpp  NpcRenderer.cpp  PlayerRenderer.cpp  RenderHelpers.cpp  Screen_OnGame.DrawObjects.cpp.preview  Screen_OnGame.Hotkeys.cpp  Screen_OnGame.cpp  Screen_OnGame.h  phase1_migration_log.txt  simplify_diff.txt
Sources/: Helbreath.sln  build.ps1  build_client_linux.sh  build_server_linux.sh  version.cfg  version.cmake  version_gen.py
Sources/AutoUpdater/: AutoUpdater.vcxproj  UpdaterConstants.h  auto_updater.cpp  auto_updater.h  updater_file_ops.cpp  updater_file_ops.h  updater_gui.h  updater_gui_win32.cpp  updater_gui_x11.cpp  updater_http.cpp  updater_http.h  updater_manifest.cpp  updater_manifest.h  updater_platform.h  updater_sha256.cpp  updater_sha256.h
Sources/CControls/: CControls.h  CControls.vcxproj  CMakeLists.txt  button.cpp  button.h  control.cpp  control.h  control_collection.cpp  control_collection.h  focus_manager.cpp  focus_manager.h  input_state.h  label.cpp  label.h  panel.cpp  panel.h  text_input.cpp  text_input.h  textbox.cpp  textbox.h  toggle_button.cpp  toggle_button.h  types.h
Sources/CControls/Debug_x64/: CControls.lib
Sources/Client/: AnimationState.cpp  AnimationState.h  AudioManager.cpp  AudioManager.h  BuildItem.h  BuildItemManager.cpp  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  ClientLog.cpp  CombatSystem.cpp  CombatSystem.h  CommonTypes.h  ConfigManager.cpp  ConfigManager.h  CraftingManager.cpp  CursorTarget.cpp  CursorTarget.h  DialogBoxIDs.h  DialogBoxManager.cpp  DialogBoxManager.h  DialogBox_Bank.cpp  DialogBox_Bank.h  DialogBox_ChangeStatsMajestic.cpp  DialogBox_ChangeStatsMajestic.h  DialogBox_Character.cpp  DialogBox_Character.h  DialogBox_ChatHistory.cpp  DialogBox_ChatHistory.h  DialogBox_CityHallMenu.cpp  DialogBox_CityHallMenu.h  DialogBox_CommandHallMenu.cpp  DialogBox_CommandHallMenu.h  DialogBox_Commander.cpp  DialogBox_Commander.h  DialogBox_ConfirmExchange.cpp  DialogBox_ConfirmExchange.h  DialogBox_Constructor.cpp  DialogBox_Constructor.h  DialogBox_CrusadeJob.cpp  (+216 more)
Sources/Client/Debug_x64/: dialogbox_character.new.obj.enc  dialogbox_hudpanel.obj.enc  dialogbox_levelupsetting.obj.enc  dialogbox_magic.obj.enc  dialogbox_skill.obj.enc  dialogbox_sysmenu.obj.enc  dialogboxmanager.obj.enc  mapdata.obj.enc  playerrenderer.obj.enc
Sources/ReleaseDbg/: Game_x64_win.lib
Sources/SFMLEngine/: RendererFactory.cpp  SFMLEngine.vcxproj  SFMLEngine.vcxproj.filters  SFMLInput.cpp  SFMLInput.h  SFMLSprite.cpp  SFMLSprite.h  SFMLSpriteFactory.cpp  SFMLSpriteFactory.h  SFMLTextRenderer.cpp  SFMLTextRenderer.h  SFMLWindow.cpp  SFMLWindow.h
Sources/Server/: AccountSqliteStore.cpp  AccountSqliteStore.h  CMakeLists.txt  Client.cpp  Client.h  CmdBroadcast.cpp  CmdGiveItem.cpp  CmdHelp.cpp  CmdReload.cpp  CmdReload.h  CmdSaveAll.cpp  CmdSaveAll.h  CmdSetAdmin.cpp  CmdSetCmdLevel.cpp  CmdShowChat.cpp  CmdShutdown.cpp  CmdShutdown.h  CmdTestCrash.cpp  CmdTestCrash.h  CombatManager.cpp  CombatManager.h  CraftingManager.cpp  DynamicObjectManager.cpp  EntityManager.cpp  EntityManager.h  FishingManager.cpp  Game.cpp  Game.h  GameChatCommand.cpp  GameCmdBeginApocalypse.cpp  GameCmdBeginApocalypse.h  GameCmdBeginCrusade.cpp  GameCmdBeginCrusade.h  GameCmdBeginHeldenian.cpp  GameCmdBeginHeldenian.h  GameCmdCreateItem.cpp  GameCmdEndApocalypse.cpp  GameCmdEndApocalypse.h  GameCmdEndCrusade.cpp  GameCmdEndCrusade.h  (+52 more)
Sources/cmake/: sentry.cmake
Sprite Work/: Helbreath Logo.psd
Sprite Work/GameDialog/: DialogText_sprite_0.psd  SystemMenuDialog.psd  dialog recreation.psd  gamedialog_sprite_6.psd  guild_menu_recreation.psd
Sprite Work/New-Dialog/: New-Dialog_sprite_3.psd
tools/: master_app.py  regen_sim.py
tools/CreationItemManager/: app.py
tools/DisplayIDManager/: extract_all_paks.py  item_db_viewer.py  item_display_names.json  item_frame_mapper_gui.py  pak_generator.py  sprite_verifier_gui.py
tools/Drops/: drop_manager.html  drop_manager_server.py  export_drops_snapshot.py  restore_all_drops.py
tools/ExpCurve/: app.py
tools/IO Tools/: green_to_grayscale.py  normalize_brightness.py
tools/InstallerCreator/: Helbreath_setup.iss  installer.json  make_installer.py
tools/ItemRenameTool/: app.py
tools/MapRenderer/: map_renderer.py  paklib.py
tools/NpcEditor/: app.py  original_npcs.json
tools/ShopManager/: app.py
tools/UpdaterServer/: gen_update_manifest.py  update_server.py
(+186 files in other folders)
